-fix issues on iphone

--- a/src/pages/components/css/Jobs.module.css
+++ b/src/pages/components/css/Jobs.module.css
@@ -147,4 +147,12 @@
     flex-direction: column;
     gap: 1rem;
   }
+  
+}
+@media (max-width: 430px) {
+  .title {
+    font-size: 50px; /* make the text smaller */
+    text-align: center;
+    white-space: nowrap; /* prevent breaking into multiple lines */
+  }
 }
